@@ -1,3 +1,12 @@
+2011-11-26  Richard Henderson  <rth@redhat.com>
+
+	* crtstuff.c (__TMC_LIST__): Mark used not unused.
+	(__TMC_END__): Only declare if hidden is available; in the definition,
+	if hidden is unavailable add a null record.
+	(deregister_tm_clones, register_tm_clones): New.
+	(__do_global_dtors_aux, frame_dummy): Use them.
+	(__do_global_dtors, __do_global_ctors_1): Likewise.
+
 2011-11-22  Iain Sandoe  <iains@gcc.gnu.org>
 
 	* config/darwin-crt-tm.c: New file.
